@@ -12,6 +12,9 @@ What's New in Python 3.0a3?
 Core and Builtins
 -----------------
 
+- Object/longobject.c: long(float('nan')) raises an OverflowError instead
+  of returning 0.
+
 - Issue #1762972: __file__ points to the source file instead of the pyc/pyo
   file if the py file exists.
 
